<resources>
    <string name="app_name">Being Blog</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="google_login">Google Sign In</string>
    <string name="not_sure">Not sure what is this ?</string>
    <string name="write">Create</string>
    <string name="read">Read</string>
    <string name="favourite">Favourites</string>
    <string name="no_news_greet">You might want to check back later</string>
    <string name="successfully_updated">Successfully updated</string>
    <string name="dummy_blog_title">New here many lines and then i dont know man just click and fuck up  </string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="author">Author</string>
    <string name="search_here">Search by title or description</string>

    <string name="please_upload_image">Please upload an image</string>
    <string name="select_a_file">Select a media file</string>
    <string name="title_content_length_error">The length of the title or content is less than expected</string>
    <string name="find_more_on_being_blog_app">Find more on the Being Blog App </string>
    <string name="no_internet_conn">Not connected to the internet</string>

    <string name="some_error">There was some error</string>
    <string name="publish">Publish</string>
    <string name="description">Description</string>
    <string name="select_a_image">Select an Image</string>
<string name="article_not_found">No blogs found</string>
    <string name="check_back_later_auth">We have trouble with your account, check back later.</string>
    <string name="saved_to_bookmarks">Added to Favorites</string>
    <string name="removed_from_bookmarks">Removed from Favorites</string>
    <string name="blog_deleted">Blog has been deleted</string>
    <string name="failed_blog_deleted">Failed to delete blog</string>
    <string name="failed_blog_update">Failed to update the blog</string>
    <string name="blog_updated">Blog has been updated</string>
    <string name="pin_board">Pin Board</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="Logout">Logout</string>
    <string name="are_your_sure_logout">Are you sure you want to logout?</string>
</resources>