<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="72dp"

        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/usersRadioGroup">
        <RadioButton
            android:id="@+id/radio0"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:padding="12dp"
            android:layout_margin="12dp"

            android:textAllCaps="true"
            android:textStyle="bold"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/admin"
            android:textColor="@drawable/radio_flat_text_selector" />

        <RadioButton
            android:id="@+id/radio1"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:padding="12dp"
            android:checked="true"
            android:layout_margin="12dp"
            android:text="@string/user"
            android:textColor="@drawable/radio_flat_text_selector" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_margin="12dp"
        android:gravity="center"
        android:layout_height="?actionBarSize" >

        <ProgressBar
            android:id="@+id/reporters_login_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />




    </RelativeLayout>
    <TextView android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:textColor="#2196F3"
        android:text="@string/not_sure"
        android:gravity="center"
        android:textSize="16sp"/>

</LinearLayout>
