<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"



    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        android:id="@+id/card_view"
        card_view:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        card_view:cardElevation="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="240dp">

            
            <FrameLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/blog_image"

                    android:src="@drawable/blogs_default"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/trending_gradient_shape" />

            </FrameLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:paddingStart="22dp"
                android:paddingEnd="22dp"
                android:paddingBottom="22dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/blog_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:fontFamily="@font/circular_font"
                    android:gravity="bottom"
                    android:lines="3"
                    android:text="@string/dummy_blog_title"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/blog_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/circular_font"
                        android:gravity="end"
                        android:lines="1"

                        android:text="@string/author"
                        android:textColor="@color/colorGrey"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/blog_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_gravity="center"
                        android:fontFamily="@font/circular_font"
                        android:paddingStart="@dimen/text_12"
                        android:paddingEnd="@dimen/text_12"
                        android:lines="1"
                        android:text="@string/date"
                        android:textColor="@color/colorGrey"
                        android:textSize="12sp" />


                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/blog_content_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:gravity="bottom"

        android:padding="22dp"

        android:text="blog \nLine 2 of blog"
        android:textColor="@color/colorGrey"
        android:textSize="18sp" />

</LinearLayout>
